--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://play-lh.googleusercontent.com/T8OESpLf0MfFAM20udw6PyOXNGORyJ2fjfAZNMCsOEmr62nn4PvUGbCgis7PUE5LeA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Mojar mojar quiz</title>
   </head>
   <body>
     <div id="root"></div>
